--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>יומן פיתוח - Dev Log</title>
+  <title>Development Log – Function Graph Overview</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>יומן פיתוח – Dev Log</h1>
-    <p>אנחנו שלושה סטודנטים למדעי המחשב שתורמים לקוד פתוח</p>
+    <h1>Development Log – Function Graph Overview</h1>
+    <p>Three computer science students contributing to open source</p>
+    <p>
+      🔗 View the project on 
+      <a href="https://github.com/tmr232/function-graph-overview" target="_blank" style="color: #a7ffeb;">
+        GitHub
+      </a>
+    </p>
   </header>
+
   <main>
     <section>
-      <h2>✨ הפוסט הראשון שלנו</h2>
-      <p>היום פתחנו את הבלוג! בחרנו להשתמש ב־GitHub Pages כדי לתעד את תהליך הפיתוח והלמידה שלנו.</p>
+      <h2>📌 About the Project</h2>
+      <p>
+        <strong>Function Graph Overview</strong> is an open-source project that allows developers to generate control flow graphs (CFG) from functions written in various programming languages. 
+        It helps visualize the logical structure and execution paths of functions, aiding in analysis and learning.
+      </p>
+      <p>
+        We are <strong>Niv, Alon, and Ben</strong>, computer science students from <strong>The Academic College of Tel Aviv–Yaffo</strong>, working together to contribute to this project as part of our open-source learning journey.
+      </p>
+      <p>
+        In this blog, we’ll post a dedicated entry for each <em>GitHub issue</em> we work on. Each post will explain what the issue is about, what it adds or fixes, the challenges we faced, and how we solved them. We'll include code snippets, screenshots, and technical explanations.  
+        When relevant, we’ll also link directly to the issue on GitHub.
+      </p>
+    </section>
+
+    <section>
+      <h2>✨ First Post – Blog Setup (<a href="https://github.com/tmr232/function-graph-overview/issues/1" target="_blank">Issue #1</a>)</h2>
+      <p>Today we launched this blog! We chose to use GitHub Pages to document our development process and share our experiences with the world.</p>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 סטודנטים למדמ"ח 💻</p>
+    <p>&copy; 2025 Computer Science Students 💻</p>
   </footer>
 </body>
 </html>
