--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Development Log – Function Graph Overview</title>
+  <title>Function Graph Overview Blog</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Development Log – Function Graph Overview</h1>
-    <p>Three computer science students contributing to open source</p>
+    <h1>Function Graph Overview Blog</h1>
+    <p>An open source contributing to the Function Graph Overview project</p>
     <p>
       🔗 View the project on 
       <a href="https://github.com/tmr232/function-graph-overview" target="_blank" style="color: #a7ffeb;">
@@ -26,7 +26,7 @@
         It helps visualize the logical structure and execution paths of functions, aiding in analysis and learning.
       </p>
       <p>
-        We are <strong>Niv, Alon, and Ben</strong>, computer science students from <strong>The Academic College of Tel Aviv–Yaffo</strong>, working together to contribute to this project as part of our open-source learning journey.
+        We are <strong>Niv, Alon, and Ben</strong>, computer science students from <strong>The Academic College of Tel Aviv–Yaffo</strong>, working together to contribute to this project as part of our final project on studies.
       </p>
       <p>
         In this blog, we’ll post a dedicated entry for each <em>GitHub issue</em> we work on. Each post will explain what the issue is about, what it adds or fixes, the challenges we faced, and how we solved them. We'll include code snippets, screenshots, and technical explanations.  
@@ -35,13 +35,14 @@
     </section>
 
     <section>
-      <h2>✨ First Post – Blog Setup (<a href="https://github.com/tmr232/function-graph-overview/issues/1" target="_blank">Issue #1</a>)</h2>
-      <p>Today we launched this blog! We chose to use GitHub Pages to document our development process and share our experiences with the world.</p>
+      <h2>✨ 18/06/25 (<a href="https://github.com/tmr232/function-graph-overview/issues/84" target="_blank">Issue #84</a>)</h2>
+      <p>Include settings & color-scheme when sharing in the demo.</p>
+      <p>Niv is the king of the world!</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Computer Science Students 💻</p>
+    <p>&copy; 2025 NIV ALON BEN 💻</p>
   </footer>
 </body>
 </html>
